Step 3 - Install Telerik for Blazor and get the data to display in a grid component

--- a/COVID.Web/Pages/CasesPage.razor
+++ b/COVID.Web/Pages/CasesPage.razor
@@ -15,7 +15,20 @@
 }
 else
 {
-    <p>Loaded.</p>
+    <TelerikGrid 
+        Data="vm.States"
+        Sortable=true
+        
+    >
+        <GridColumns>
+            <GridColumn Field="Date"></GridColumn>
+            <GridColumn Field="State"></GridColumn>
+            <GridColumn Field="NumTotal"></GridColumn>
+            <GridColumn Field="NumPositive"></GridColumn>
+            <GridColumn Field="NumNegative"></GridColumn>
+            <GridColumn Field="Hospitalization"></GridColumn>
+        </GridColumns>
+    </TelerikGrid>
 }
 
 @code {
