--- a/COVID.Web/Pages/_Layout.cshtml
+++ b/COVID.Web/Pages/_Layout.cshtml
@@ -12,6 +12,10 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="COVID.Web.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
+    <script src="_content/Telerik.UI.for.Blazor.Trial/js/telerik-blazor.js"></script>
+    <link rel="stylesheet" href="_content/Telerik.UI.for.Blazor.Trial/css/kendo-theme-default/all.css" />
+
 </head>
 <body>
     @RenderBody()
