--- a/COVID.Web/Shared/MainLayout.razor
+++ b/COVID.Web/Shared/MainLayout.razor
@@ -1,19 +1,22 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>COVID.Web</PageTitle>
+<TelerikRootComponent>
+    <PageTitle>COVID.Web</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+    <div class="page">
+        <div class="sidebar">
+            <NavMenu />
         </div>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+        <main>
+            <div class="top-row px-4">
+                <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            </div>
+
+            <article class="content px-4">
+                @Body
+            </article>
+        </main>
+    </div>
+
+</TelerikRootComponent>
