--- a/COVID.Web/_Imports.razor
+++ b/COVID.Web/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using COVID.Web
 @using COVID.Web.Shared
+
+@using Telerik.Blazor
+@using Telerik.Blazor.Components
+@using Telerik.SvgIcons
+@using Telerik.FontIcons
