--- a/COVID.Web/wwwroot/css/site.css
+++ b/COVID.Web/wwwroot/css/site.css
@@ -62,3 +62,10 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.FormLabel{
+    font-weight: bold;
+}
+.FormValue {
+    
+}
