--- a/COVID.Web/Shared/NavMenu.razor
+++ b/COVID.Web/Shared/NavMenu.razor
@@ -16,7 +16,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Cases">
-                <span class="oi oi-plus" aria-hidden="true"></span> Cases by State
+                <span class="oi oi-action-undo" aria-hidden="true"></span> Historical Case Data
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="States">
+                <span class="oi oi-target" aria-hidden="true"></span> State Information
             </NavLink>
         </div>
     </nav>
