--- a/COVID.Web/Shared/NavMenu.razor
+++ b/COVID.Web/Shared/NavMenu.razor
@@ -14,14 +14,16 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Cases">
-                <span class="oi oi-action-undo" aria-hidden="true"></span> Historical Case Data
-            </NavLink>
-        </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="States">
                 <span class="oi oi-target" aria-hidden="true"></span> State Information
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Cases">
+                <span class="oi oi-action-undo" aria-hidden="true"></span> Full Historical Data
             </NavLink>
         </div>
     </nav>
