--- a/COVID.Web/Shared/NavMenu.razor
+++ b/COVID.Web/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Cases">
+            <NavLink class="nav-link" href="AllData">
                 <span class="oi oi-action-undo" aria-hidden="true"></span> Full Historical Data
             </NavLink>
         </div>
