--- a/COVID.Web/Pages/HistoricalPage.razor
+++ b/COVID.Web/Pages/HistoricalPage.razor
@@ -11,7 +11,8 @@
 
 <p>
     This page allows you to view all of the information available from the API.  It includes a row for every state with cumulative totals for each month of data collected.
-    The built in Telerik grid filtering functionality is made available to refine searches.
+    The built in Telerik grid filtering functionality is made available to refine searches.  Note that the animation stops after the data is retieved and there might be 
+    a delay while rending the page.
 </p>
 
 
